scenarios/ciliumfhir/deploy/cilium-fhir-starwars.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: coruscanthealth
  labels:
    app.kubernetes.io/name: coruscanthealth
spec:
  type: ClusterIP
  ports:
  - port: 52773
  selector:
    org: empire
    class: coruscanthealth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coruscanthealth
  labels:
    app.kubernetes.io/name: coruscanthealth
spec:
  replicas: 1
  selector:
    matchLabels:
      org: empire
      class: coruscanthealth
  template:
    metadata:
      labels:
        org: empire
        class: coruscanthealth
        app.kubernetes.io/name: coruscanthealth
    spec:
      containers:
      - name: coruscanthealth
        image: docker.io/sween/ciliumfhir
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Pod
metadata:
  name: fx-6
  labels:
    org: empire
    class: medicaldroid
    app.kubernetes.io/name: fx6
spec:
  containers:
  - name: fx-6
    image: scrapinghub/httpbin:latest
    command:
      - "sh"
      - "-c"
      - >
        while true; do
          sleep 10;
          curl http://coruscanthealth:52773/intersystems/fhir/r5/metadata;
        done
---
apiVersion: v1
kind: Pod
metadata:
  name: dd-13
  labels:
    org: empire
    class: medicaldroid
    app.kubernetes.io/name: dd13
spec:
  containers:
  - name: dd-13
    image: scrapinghub/httpbin:latest
    command:
      - "sh"
      - "-c"
      - >
        while true; do
          sleep 10;
          curl http://coruscanthealth:52773/intersystems/fhir/r5/metadata;
        done
---
apiVersion: v1
kind: Pod
metadata:
  name: 21b
  labels:
    org: empire
    class: medicaldroid
    app.kubernetes.io/name: 21b
spec:
  containers:
  - name: 21b
    image: scrapinghub/httpbin:latest
    command:
      - "sh"
      - "-c"
      - >
        while true; do
          sleep 10;
          curl http://coruscanthealth:52773/intersystems/fhir/r5/metadata;
        done
---
apiVersion: v1
kind: Pod
metadata:
  name: payer
  labels:
    app.kubernetes.io/name: payer
    org: republic
    class: payer
spec:
  containers:
  - name: payer
    image: scrapinghub/httpbin:latest
    command:
      - "sh"
      - "-c"
      - >
        while true; do
          sleep 10;
          curl http://coruscanthealth:52773/intersystems/fhir/r5/metadata;
        done
