scenarios/ciliumfhir/deploy/cilium-intersystems-fhir-starwars.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: coruscanthealth
  labels:
    app.kubernetes.io/name: coruscanthealth
spec:
  type: ClusterIP
  ports:
  - port: 52773
  selector:
    org: empire
    class: coruscanthealth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coruscanthealth
  labels:
    app.kubernetes.io/name: coruscanthealth
spec:
  replicas: 1
  selector:
    matchLabels:
      org: empire
      class: coruscanthealth
  template:
    metadata:
      labels:
        org: empire
        class: coruscanthealth
        app.kubernetes.io/name: coruscanthealth
    spec:
      containers:
      - name: coruscanthealth
        image: docker.io/sween/ciliumfhir
        imagePullPolicy: IfNotPresent
        command:
          - "sh"
          - "-c"
          - >
            [...]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fx-6
  labels:
    app.kubernetes.io/name: fx-6
spec:
  replicas: 1
  selector:
    matchLabels:
      org: empire
      class: medicaldroid-surgical
  template:
    metadata:
      labels:
        org: empire
        class: medicaldroid-surgical
        app.kubernetes.io/name: fx-6
    spec:
      containers:
      - name: fx-6
        image: scrapinghub/httpbin:latest
        imagePullPolicy: IfNotPresent
        command:
          - "sh"
          - "-c"
          - >
            while true; do
              sleep 10;
              curl http://coruscanthealth:52773/intersystems/fhir/r5/Patient/DarthVader;
            done
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dd-13
  labels:
    app.kubernetes.io/name: dd-13
spec:
  replicas: 1
  selector:
    matchLabels:
      org: empire
      class: medicaldroid-medical-assist
  template:
    metadata:
      labels:
        org: empire
        class: medicaldroid-medical-assist
        app.kubernetes.io/name: dd-13
    spec:
      containers:
      - name: fx-6
        image: scrapinghub/httpbin:latest
        imagePullPolicy: IfNotPresent
        command:
          - "sh"
          - "-c"
          - >
            while true; do
              sleep 10;
              curl http://coruscanthealth:52773/intersystems/fhir/r5/Patient/DarthVader;
            done
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 21-b
  labels:
    app.kubernetes.io/name: 21-b
spec:
  replicas: 1
  selector:
    matchLabels:
      org: empire
      class: medicaldroid-medical
  template:
    metadata:
      labels:
        org: empire
        class: medicaldroid-medical
        app.kubernetes.io/name: 21-b
    spec:
      containers:
      - name: 21-b
        image: scrapinghub/httpbin:latest
        imagePullPolicy: IfNotPresent
        command:
          - "sh"
          - "-c"
          - >
            while true; do
              sleep 10;
              curl http://coruscanthealth:52773/intersystems/fhir/r5/DarthVader;
            done
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: payer
#  labels:
#    app.kubernetes.io/name: payer
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      org: empire
#      class: payer-insurance
#  template:
#    metadata:
#      labels:
#        org: empire
#        class: payer-insurance
#        app.kubernetes.io/name: payer
#    spec:
#      containers:
#      - name: payer
#        image: scrapinghub/httpbin:latest
#        imagePullPolicy: IfNotPresent
#        command:
#          - "sh"
#          - "-c"
#          - >
#            while true; do
#              sleep 10;
#              curl http://coruscanthealth:52773/intersystems/fhir/r5/Patient/AnakinSkywalker;
#            done
